20 Mar 2005 mipsator
 * improved the parser to allow type checking of options.

17 Mar 2005 mreindl
 * pmkcfg.sh: fall back to 'cc -E' when cpp isn't available and obey $CPP when
   set.

13 Mar 2005 mipsator
 * added option checking in parser.
 * comment cosmetics in parser.

25 Feb 2005 mipsator
 * implemented backup options in pmkinstall.

05 Feb 2005 mipsator
 * fragmented pmkinstall main loop into sub functions.

# PMK 0.9.2 release

29 Jan 2005 mipsator
 * fixed the -v option of pmksetup.
 * fixed pmksetup behavior when the user has not the required privileges.
 * moved the configuration directory checking earlier in the program
   execution.

# PMK 0.9.1 release

26 Jan 2005 mipsator
 * fixed segfault in x86 cpu detection.
 * added __ALPHA in alpha architecture macro.
 * fixed call order for setegid(), setgid(), seteuid() and setuid().

21 Jan 2005 mipsator
 * keep the PATH separator as is instead of replacing it with a comma.
	NOTE: This means that you must update your pmk.conf before using
	pmk again.
 * added a debug mechanism in pmksetup to work without fork and privsep.
 * fixed keycomp() by reverting changes that broken sorting.
 * added more information about pmk.conf in its manual page.

20 Jan 2005 mipsator
 * fixed skip_useless() to update frame buffer.

18 Jan 2005 mipsator
 * moved pmksetup into bin instead of sbin.
 * use lists for install and deinstall.

17 Jan 2005 mipsator
 * merged PRIVSEP branch.

13 Jan 2005 mipsator
 * more stuff for ia64 cpu detection.

12 Jan 2005 mipsator
 * added basic ia64 cpu identification.

06 Jan 2005 mipsator
 * made pmksetup more verbose on cpu detection failure.

02 Jan 2005 mipsator
 * added alpha cpu identification.

# PMK 0.9.0 release

27 Dec 2004 mipsator
 * improved handling of CFLAGS and LDFLAGS with pmkcfg.sh
 * added x86 64 bits cpu detection code.

26 Dec 2004 mipsator
 * added snprintf_b(), strlcat_b() and strlcpy_b() in pmk_string.c.
 * added support for AMD cpu feature detection.